Fix print spacing. (#26)

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -367,7 +367,7 @@ figure {
   body { 
     margin: 0 0.5in 0 0.5in;
     font-size: 12px !important;
-    line-height: normal !important;
+    line-height: 1rem !important;
   }
 
   #top {
